Ch.5 Task 22 Скорректировано )